Make sure that Init() failures for image frames don't mean no alt text.  Also fixes a crasher when reframing fixed-pos frames.

This change adds an assertion in ConstructHTMLFrame that InitAndRestoreFrame
should succeed (unless it returns NS_ERROR_FRAME_REPLACED).  This is an interim
change; eventually we want to bail out on errors, but there may be frame impls
that return errors in non-error conditions from Init() (eg nsFrameSetFrame did
that) and we're a little close to freeze.

Bug 202506, r=rbs, sr=roc+moz